2004-06-23  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/text/GapContent/GapContentTest.java,
	gnu/testlet/javax/swing/text/PlainDocument/PlainDocumentTest.java,
	gnu/testlet/javax/swing/text/AbstractDocument/AbstractDocumentTest.java:
	New files.

2004-06-21  Ito kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/text/MessageFormat/format.java:
	Add some tests.

2004-06-20  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/beans/Statement/check.java: New test.

2004-06-09  Anthony Green  <green@redhat.com>

	* gnu/testlet/java/util/zip/ZipFile/NoEntryTest.java: New test.

2004-06-06  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/util/SimpleTimeZone/check14.java: Fix uses of
	SimpleTimeZone.getOffset.

2004-06-05  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/util/zip/ZipEntry/time.java: New test.

2004-06-03  Max Gilead  <gilead@yellowhedgehog.com>

	* gnu/testlet/java/awt/geom/CubicCurve2D/getFlatness.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/getFlatnessSq.java,
	gnu/testlet/java/awt/geom/FlatteningPathIterator/getWindingRule.java,
	gnu/testlet/java/awt/geom/GeneralPath/append_PathIterator.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/getFlatness.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/getFlatnessSq.java,
	gnu/testlet/java/awt/geom/RoundRectangle2D/contains.java,
	gnu/testlet/java/awt/geom/RoundRectangle2D/intersects.java,
	gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/getSampleSize.java,
	gnu/testlet/java/io/BufferedOutputStream/helper.java,
	gnu/testlet/java/io/File/newFile.java,
	gnu/testlet/java/io/File/security.java,
	gnu/testlet/java/io/FileOutputStream/jdk12.java,
	gnu/testlet/java/io/FileReader/jdk11.java,
	gnu/testlet/java/io/FileWriter/jdk11.java,
	gnu/testlet/java/io/FilterWriter/MyFilterWriter.java,
	gnu/testlet/java/io/FilterWriter/write.java,
	gnu/testlet/java/io/ObjectInputOutput/Compat2.java,
	gnu/testlet/java/io/ObjectStreamClass/ProxyTest.java,