@@ -1,3 +1,9 @@
+2004-06-23  Max Gilead  <gilead@yellowhedgehog.com>
+
+	* gnu/testlet/java/nio/Buffer/PlainBufferTest.java,
+	gnu/testlet/java/nio/Buffer/WrappedWithOffsetBufferTest.java:
+	Made sure exception-based tests fail properly.
+
 2004-06-23  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/testlet/javax/swing/text/GapContent/GapContentTest.java,
